--- a/src/template.html
+++ b/src/template.html
@@ -3,17 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,200,0,0&
+    icon_names=add_circle,article,calendar_month,calendar_today,chat_bubble,check_circle,grid_view,home,inbox,more_horiz,person_add,search,share,tag" />
     <title>Todolist App</title>
 </head>
 <body>
     <nav>
+        <div id="nav-header">
+            <div>
+                <img src="#" alt="">
+                <span>User</span>
+            </div>
+            <div>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
+        <div id="nav-body">
+            <div class="nav-item"><span class="material-symbols-outlined">add_circle</span>Add Task</div>
+            <div class="nav-item"><span class="material-symbols-outlined">search</span>Search</div>
+            <div class="nav-item"><span class="material-symbols-outlined">inbox</span>Inbox</div>
+            <div class="nav-item"><span class="material-symbols-outlined">calendar_today</span>Today</div>
+            <div class="nav-item"><span class="material-symbols-outlined">calendar_month</span>Upcoming</div>
+            <div class="nav-item"><span class="material-symbols-outlined">grid_view</span>Filters & Labels</div>
+            <div class="nav-item"><span class="material-symbols-outlined">check_circle</span>Completed</div>
+            <div></div>
+        </div>
+        <div id="projects">
+            <h3>My projects</h3>
+            <div class="nav-item">
+                <span class="material-symbols-outlined">tag</span>Home
+            </div>
+        </div> 
+        <div id="nav-footer">
+            <div></div>
+            <div></div>
+        </div>
 
     </nav>
 
     <main>
+        <div id="main-header">
+            <div>
+                <p>My Projects / </p>
+            </div>
+            <div id="main-header-options">
+                <div><span class="material-symbols-outlined">person_add</span>Share</div>
+                <div><span class="material-symbols-outlined">article</span>Display</div>
+                <div><span class="material-symbols-outlined">chat_bubble</span></div>
+                <div><span class="material-symbols-outlined">more_horiz</span></div>
+            </div>
+        </div>
         
     </main>
 
     
 </body>
-</html>
+</html> 
