--- a/src/template.html
+++ b/src/template.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,200,0,0&
     icon_names=add_circle,article,calendar_clock,calendar_month,calendar_today,chat_bubble,
-    check_circle,circle,drag_indicator,edit,grid_view,home,inbox,more_horiz,person_add,search,share,tag" />
+    check_circle,chevron_right,circle,drag_indicator,edit,grid_view,home,inbox,keyboard_arrow_down,
+    more_horiz,person_add,search,share,tag" />
     <title>Todolist App</title>
 </head>
 <body>
@@ -27,13 +28,16 @@
             <div class="nav-item"><span class="material-symbols-outlined">calendar_today</span>Today</div>
             <div class="nav-item"><span class="material-symbols-outlined">calendar_month</span>Upcoming</div>
             <div class="nav-item"><span class="material-symbols-outlined">grid_view</span>Filters & Labels</div>
-            <div class="nav-item"><span class="material-symbols-outlined">check_circle</span>Completed</div>
+            <div class="nav-item"><span id="completed" class="material-symbols-outlined circle-container checked-circle flex-row justify-center align-center">check_circle</span>Completed</div>
             <div></div>
         </div>
         <div id="projects">
             <h3>My projects</h3>
-            <div class="nav-item">
+            <div data-name="home" class="nav-item">
                 <span class="material-symbols-outlined">tag</span>Home
+            </div>
+            <div data-name="start" class="nav-item">
+                <span class="material-symbols-outlined">tag</span>Getting Started
             </div>
         </div> 
         <div id="nav-footer">
