--- a/src/template.html
+++ b/src/template.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,200,0,0&
-    icon_names=add_circle,article,calendar_clock,calendar_month,calendar_today,chat_bubble,
+    icon_names=add_2,add_circle,article,calendar_clock,calendar_month,calendar_today,chat_bubble,
     check_circle,chevron_right,circle,drag_indicator,edit,grid_view,home,inbox,keyboard_arrow_down,
     more_horiz,person_add,search,share,tag" />
     <title>Todolist App</title>
