--- a/src/template.html
+++ b/src/template.html
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div id="nav-body">
-            <div class="nav-item"><span class="material-symbols-outlined">add_circle</span>Add Task</div>
+            <div id="add-navbar" class="nav-item"><span id="add-nav-icon" class="material-symbols-outlined">add_2</span>Add Task</div>
             <div class="nav-item"><span class="material-symbols-outlined">search</span>Search</div>
             <div class="nav-item"><span class="material-symbols-outlined">inbox</span>Inbox</div>
             <div class="nav-item"><span class="material-symbols-outlined">calendar_today</span>Today</div>
