--- a/src/template.html
+++ b/src/template.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,200,0,0&
     icon_names=add_2,add_circle,article,calendar_clock,calendar_month,calendar_today,chat_bubble,
-    check_circle,chevron_right,circle,drag_indicator,edit,grid_view,home,inbox,keyboard_arrow_down,
+    check_circle,chevron_right,circle,close,drag_indicator,edit,grid_view,home,inbox,keyboard_arrow_down,
     more_horiz,person_add,search,share,tag" />
     <title>Todolist App</title>
 </head>
@@ -32,7 +32,11 @@
             <div></div>
         </div>
         <div id="projects">
-            <h3>My projects</h3>
+            <div id="project-title-tab">
+                <h3>My projects</h3>
+                <span id="add-project" class="material-symbols-outlined">add_2</span>
+            </div>
+            
             <div data-name="home" class="nav-item">
                 <span class="material-symbols-outlined">tag</span>Home
             </div>
